language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_module_function_calls.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import example_module
fn main() {
  example_module.my_fn
                 ↑    
}

----- Jumped to `src/example_module.gleam`
pub fn my_fn() { Nil }
↑▔▔▔▔▔▔▔▔▔▔▔▔▔
