language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_nested_pattern_label.snap
---
source: language-server/src/tests/definition.rs
assertion_line: 1056
expression: output
snapshot_kind: text
---
----- Jumping from `src/app.gleam`

pub type Inner {
  Inner(b: String)
}

pub type Outer {
  Outer(a: Inner)
}

pub fn main(x: Outer) {
  case x {
    Outer(a: Inner(b: y)) -> y
                   ↑          
  }
}

----- Jumped to `src/app.gleam`

pub type Inner {
  Inner(b: String)
        ↑         
}

pub type Outer {
  Outer(a: Inner)
}

pub fn main(x: Outer) {
  case x {
    Outer(a: Inner(b: y)) -> y
  }
}
