language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_of_external_function_in_same_module.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

@external(erlang, "wibble", "wobble")
fn external_function() -> Nil

fn main() {
  external_function()
         ↑           
}

----- Jumped to `src/app.gleam`

@external(erlang, "wibble", "wobble")
fn external_function() -> Nil
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔       

fn main() {
  external_function()
}
