language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_of_local_variable_from_guard.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

pub fn main() {
  let wibble = True
  let wobble = False
  case wibble {
    True if wobble -> !wibble
             ↑               
    False if !wobble -> wibble
    _ -> wobble
  }
}

----- Jumped to `src/app.gleam`

pub fn main() {
  let wibble = True
  let wobble = False
      ↑▔▔▔▔▔        
  case wibble {
    True if wobble -> !wibble
    False if !wobble -> wibble
    _ -> wobble
  }
}
