language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_of_module_select_from_guard.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import mod

pub fn main() {
  let wibble = True
  case wibble {
    True if mod.wibble < 5 -> !wibble
                ↑                    
    False if mod.wibble != 10 -> wibble
    _ -> mod.wibble + 1
  }
}

----- Jumped to `src/mod.gleam`
pub const wibble = 10
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
