language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_of_record_from_guard.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

type Wibble {
  Wibble
  Wobble
}

pub fn main() {
  let wibble = True
  let wobble = Wibble
  case wibble {
    True if wobble == Wibble -> !wibble
                          ↑            
    False if wobble == Wobble -> wibble
    _ -> Wibble
  }
}

----- Jumped to `src/app.gleam`

type Wibble {
  Wibble
  ↑▔▔▔▔▔
  Wobble
}

pub fn main() {
  let wibble = True
  let wobble = Wibble
  case wibble {
    True if wobble == Wibble -> !wibble
    False if wobble == Wobble -> wibble
    _ -> Wibble
  }
}
