language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_of_record_module_select_from_guard.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import mod

pub fn main() {
  let wibble = True
  let wobble = mod.Wibble
  case wibble {
    True if wobble == mod.Wobble -> !wibble
    False if wobble == mod.Wibble -> wibble
                            ↑              
    _ -> mod.Wibble
  }
}

----- Jumped to `src/mod.gleam`
pub type Wobble { Wibble Wobble }
                  ↑▔▔▔▔▔
