language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_record_field_access_unknown_variant.snap
---
source: language-server/src/tests/definition.rs
assertion_line: 983
expression: output
snapshot_kind: text
---
----- Jumping from `src/app.gleam`

pub type Shape {
  Circle(label: String, radius: Float)
  Rectangle(label: String, width: Float, height: Float)
}

pub fn get_label(s: Shape) -> String {
  s.label
    ↑    
}

----- Jumped to `src/app.gleam`

pub type Shape {
  Circle(label: String, radius: Float)
         ↑▔▔▔▔                        
  Rectangle(label: String, width: Float, height: Float)
}

pub fn get_label(s: Shape) -> String {
  s.label
}
