language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_record_field_from_declaration.snap
---
source: language-server/src/tests/definition.rs
assertion_line: 1033
expression: output
---
----- Jumping from `src/app.gleam`

pub type Person {
  Person(name: String, age: Int)
         ↑                      
}

----- Jumped to `src/app.gleam`

pub type Person {
  Person(name: String, age: Int)
         ↑▔▔▔                   
}
